feat: integrate multer memory storage with ImageKit upload flow and create user module

--- a/resources/check.html
+++ b/resources/check.html
@@ -1,1 +1,30 @@
 Date.now() - user.resetPasswordOTPSentAt < 2 * 60 * 1000
+https://chatgpt.com/s/t_697f59e6dc2c819194c5eaa32085b3ae
+
+// FLOW DIAGRAM OF DPAAS SYSTEM
+//Client (Web / API)
+   ↓
+Auth Module (Who are you?)
+   ↓
+User Module (Who is this user?)
+   ↓
+Core Feature Modules (What are you doing?)
+   ↓
+Supporting Modules (Analytics, GitHub, Billing)
+   ↓
+Response
+
+
+// FLOW DIAGRAM OF DPAAS SYSTEM
+| Step | Module    | Responsibility      | Example               |
+| ---- | --------- | ------------------- | --------------------- |
+| 1    | Auth      | Verify identity     | Validate JWT          |
+| 2    | User      | Load user context   | Get profile, settings |
+| 3    | Portfolio | Portfolio structure | Sections, visibility  |
+| 4    | Project   | Projects data       | CRUD projects         |
+| 5    | Theme     | UI config           | Theme, layout         |
+| 6    | Analytics | Track event         | View, click           |
+| 7    | Response  | Send data           | JSON / SSR            |
+
+
+
