feat(posts): implement production-ready CRUD operations with validation and authorization
- Added create, read, update, and soft delete post APIs
- Implemented service-layer authorization and business rules
- Added ObjectId validation and proper HTTP status handling
- Integrated soft delete with audit fields
- Improved controller–service–DAO separation

--- a/resources/check.html
+++ b/resources/check.html
@@ -31,3 +31,5 @@ Response
 // post module
 https://chatgpt.com/s/t_6981eb01b78881918dfe9322ccfe7dd4 //post model
 https://chatgpt.com/s/t_6981edf078908191afb13b7f140f2578 // post dao
+
+https://chatgpt.com/s/t_6983721a8ff88191aad18ca344097249 // post service
